[package]
name = "z-dns-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
rand = "0.8.4"
bincode = "2.0.0-rc.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_repr = "0.1.9"
serde_bytes = "0.11.7"